--- a/src/app/shared/components/theme-toggle/theme-toggle.component.scss
+++ b/src/app/shared/components/theme-toggle/theme-toggle.component.scss
@@ -1,7 +1,7 @@
 .style-switcher {
   position: fixed;
   top: 2rem;
-  right: 2rem;
+  left: 2rem;
   z-index: 1001;
 }
 
@@ -83,7 +83,7 @@
 .style-switcher-panel {
   position: absolute;
   top: 100%;
-  right: 0;
+  left: 0;
   margin-top: 0.5rem;
   width: 320px;
   background: var(--card-bg);
@@ -351,7 +351,7 @@
 @media (max-width: 768px) {
   .style-switcher {
     top: 1rem;
-    right: 1rem;
+    left: 1rem;
   }
   
   .style-switcher-toggle {
@@ -362,7 +362,7 @@
   
   .style-switcher-panel {
     width: 280px;
-    right: -20px;
+    left: -20px;
   }
   
   .theme-icon-container {
@@ -398,7 +398,7 @@
   
   .style-switcher-panel {
     width: 260px;
-    right: -40px;
+    left: -40px;
   }
   
   .color-grid {
