--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-navigation></app-navigation>
-<app-theme-toggle></app-theme-toggle>
+<div class="control-buttons">
+  <app-theme-button></app-theme-button>
+  <app-theme-toggle></app-theme-toggle>
+</div>
 <router-outlet></router-outlet>
