--- a/src/app/features/projects/projects.component.scss
+++ b/src/app/features/projects/projects.component.scss
@@ -77,7 +77,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.8);
+  background: var(--accent-color);
   color: var(--text-color);
   display: flex;
   align-items: center;
@@ -91,7 +91,7 @@
   
   // Texto aparece no hover
   .project-card:hover & {
-    opacity: 1;
+    opacity: 0.9;
   }
 }
 
