--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -3,33 +3,47 @@
   <div class="nav-container">
     <div class="nav-menu">
       <ul class="nav-list">
-        <li class="nav-item">
-          <a routerLink="/home" routerLinkActive="active" class="nav-link" title="Home">
+        <li class="nav-item nav-item-home" 
+            [class.expanded]="isHovered('home')"
+            (mouseenter)="onMouseEnter('home')" 
+            (mouseleave)="onMouseLeave()">
+          <a routerLink="/home" routerLinkActive="active" class="nav-link nav-link-home" title="Home">
+            <span class="nav-text" [class.visible]="isHovered('home')">Home</span>
             <svg class="nav-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
               <polyline points="9,22 9,12 15,12 15,22"></polyline>
             </svg>
           </a>
         </li>
-        <li class="nav-item">
-          <a routerLink="/about" routerLinkActive="active" class="nav-link" title="About">
+        <li class="nav-item nav-item-icon" 
+            [class.expanded]="isHovered('about')"
+            (mouseenter)="onMouseEnter('about')" 
+            (mouseleave)="onMouseLeave()">
+          <a routerLink="/about" routerLinkActive="active" class="nav-link nav-link-icon" title="About">
+            <span class="nav-text" [class.visible]="isHovered('about')">About</span>
             <svg class="nav-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
               <circle cx="12" cy="7" r="4"></circle>
             </svg>
           </a>
         </li>
-        <li class="nav-item">
-          <a routerLink="/projects" routerLinkActive="active" class="nav-link" title="Projects">
+        <li class="nav-item nav-item-icon" 
+            [class.expanded]="isHovered('projects')"
+            (mouseenter)="onMouseEnter('projects')" 
+            (mouseleave)="onMouseLeave()">
+          <a routerLink="/projects" routerLinkActive="active" class="nav-link nav-link-icon" title="Projects">
+            <span class="nav-text" [class.visible]="isHovered('projects')">Projects</span>
             <svg class="nav-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
-              <line x1="8" y1="21" x2="16" y2="21"></line>
-              <line x1="12" y1="17" x2="12" y2="21"></line>
+              <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
             </svg>
           </a>
         </li>
-        <li class="nav-item">
-          <a routerLink="/contact" routerLinkActive="active" class="nav-link" title="Contact">
+        <li class="nav-item nav-item-icon" 
+            [class.expanded]="isHovered('contact')"
+            (mouseenter)="onMouseEnter('contact')" 
+            (mouseleave)="onMouseLeave()">
+          <a routerLink="/contact" routerLinkActive="active" class="nav-link nav-link-icon" title="Contact">
+            <span class="nav-text" [class.visible]="isHovered('contact')">Contact</span>
             <svg class="nav-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
               <polyline points="22,6 12,13 2,6"></polyline>
